fix hover on mobile devices

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -49,12 +49,14 @@ $theme-secondary: rgb(216 73 29);
   --color-button-text: var(--gray-darker);
 
   --color-modal-background: #{color.change($theme-gray, $lightness: 15%, $alpha: 0.7)};
+  --color-modal-background-light: #{color.change($theme-gray, $lightness: 15%, $alpha: 0.5)};
 
   --radius-sm: 0.25rem;
   --radius-md: 0.5rem;
   --radius-lg: 1rem;
 
   --weight-normal: 400;
+  --weight-semibold: 600;
   --weight-bold: 700;
   --weight-black: 900;
 
